[gd_scene load_steps=8 format=2]

[ext_resource path="res://EnemyAsset/ExploNPC.gd" type="Script" id=1]
[ext_resource path="res://Burn.gd" type="Script" id=2]
[ext_resource path="res://DefaultMat.tres" type="Material" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.8, 1, 0.8 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 1, 1, 1 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.768627, 0.0901961, 0.0901961, 1 )

[sub_resource type="SphereMesh" id=4]
resource_local_to_scene = true
material = SubResource( 3 )
radius = 0.1
height = 0.2

[node name="ExploNPC" type="KinematicBody" groups=["enemy"]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="attackTimer" type="Timer" parent="."]
one_shot = true

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]
aabb = AABB( -0.5, -0.5, -0.5, 1, 1, 1 )

[node name="StateMachine" type="Node" parent="."]

[node name="Burn" type="Node" parent="StateMachine"]
script = ExtResource( 2 )

[node name="BurnTimer" type="Timer" parent="StateMachine/Burn"]
one_shot = true

[node name="dmgTimer" type="Timer" parent="StateMachine/Burn"]
one_shot = true

[node name="CPUParticles" type="CPUParticles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.906828, 0 )
emitting = false
lifetime = 0.6
mesh = SubResource( 4 )
emission_shape = 1
emission_sphere_radius = 0.7
direction = Vector3( 0, 1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 2.0

[connection signal="timeout" from="StateMachine/Burn/BurnTimer" to="StateMachine/Burn" method="_on_BurnTimer_timeout"]
